--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -1,4 +1,3 @@
-<!-- Salve como index.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -123,6 +122,28 @@
 </head>
 <body>
 
+<header>
+  <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
+  <h1>📋 Cancelamentos - Grupo DV</h1>
+</header>
+
+<div class="container">
+  <div class="filters">
+    <input type="date" id="dataInicio" />
+    <input type="date" id="dataFim" />
+    <select id="filtroEmpresa"></select>
+    <input type="text" id="filtroBusca" placeholder="Buscar item..." />
+  </div>
+
+  <button class="btn-whatsapp" onclick="enviarWhatsapp()">📤 Enviar via WhatsApp</button>
+
+  <div class="total-cancelado">
+    📊 Total Cancelado: <span id="totalCancelado">R$ 0,00</span>
+  </div>
+
+  <div id="listaCancelamentos"></div>
+</div>
+
 <script>
 const URL_SCRIPT = 'https://script.google.com/macros/s/AKfycbzaS3QgsNyePSGRlpy3Ue6EuQw75QYID9jadb-KezTv8y9Mg6d8HFoKUCzcBRqzM5aMBg/exec';
 let cancelamentos = [];
@@ -148,11 +169,9 @@ function preencherFiltros() {
 
 function preencherDataPadrao() {
   const hoje = new Date();
-  const ontem = new Date();
+  const ontem = new Date(hoje);
   ontem.setDate(hoje.getDate() - 1);
-
-  const formato = d => d.toISOString().split("T")[0];
-
+  const formato = d => d.toISOString().split('T')[0];
   document.getElementById("dataInicio").value = formato(ontem);
   document.getElementById("dataFim").value = formato(ontem);
 }
