--- a/index.conciliacao.html
+++ b/index.conciliacao.html
@@ -3,15 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>Conciliações</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    html, body {
-      font-family: Arial, sans-serif;
-      background: #f7f7f7;
-      margin: 0;
-      padding: 0;
-    }
+    body { font-family: Arial, sans-serif; background: white; margin: 0; padding: 0; }
     header {
       background-color: white;
       padding: 10px 20px;
@@ -19,47 +14,29 @@
       align-items: center;
       border-bottom: 1px solid #ccc;
     }
-    header img {
-      height: 50px;
-      margin-right: 20px;
+    header img { height: 50px; margin-right: 20px; }
+    header h1 { margin: 0; font-size: 1.6em; font-weight: bold; }
+    .container { padding: 20px; }
+    .filters {
+      display: flex; flex-wrap: wrap; gap: 10px; margin-bottom: 20px; align-items: end;
     }
-    header h1 {
-      margin: 0 auto;
-      font-size: 1.6em;
-      font-weight: bold;
-      text-align: center;
-      flex: 1;
-    }
-    .container {
-      padding: 20px;
-    }
-    .filtros {
-      margin-bottom: 20px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-    .filtros select, .filtros input {
+    .filters label { font-weight: bold; }
+    .filters select, .filters input[type="date"] {
       padding: 10px;
-      border-radius: 6px;
+      border-radius: 8px;
       border: 1px solid #ccc;
-      min-width: 150px;
+      width: 100%;
     }
-    #btnWhats {
-      background-color: #25d366;
+    .filters > div { flex: 1 1 200px; }
+    .btn-whatsapp {
+      background-color: #25D366;
       color: white;
       padding: 10px 20px;
-      font-weight: bold;
-      border: none;
       border-radius: 8px;
+      border: none;
+      font-weight: bold;
       cursor: pointer;
-      margin: 20px 0;
-    }
-    .graficos {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: space-between;
+      margin-top: 10px;
     }
     canvas {
       background: white;
@@ -69,6 +46,7 @@
       flex: 1;
       min-width: 320px;
     }
+    .charts { display: flex; flex-wrap: wrap; gap: 20px; justify-content: space-between; }
   </style>
 </head>
 <body>
@@ -79,29 +57,30 @@
 </header>
 
 <div class="container">
-  <div class="filtros">
+  <div class="filters">
     <div>
-      <label for="data">Data:</label><br>
+      <label for="data">Data:</label>
       <input type="date" id="data" onchange="filtrar()">
     </div>
     <div>
-      <label for="empresa">Empresa:</label><br>
+      <label for="empresa">Empresa:</label>
       <select id="empresa" onchange="filtrar()">
         <option value="todas">Todas</option>
       </select>
     </div>
+    <div>
+      <button class="btn-whatsapp" onclick="enviarWhatsapp()">📤 Enviar via WhatsApp</button>
+    </div>
   </div>
 
-  <button id="btnWhats">📲 Enviar via WhatsApp</button>
-
-  <div class="graficos">
+  <div class="charts">
     <canvas id="graficoPercentual"></canvas>
     <canvas id="graficoValor"></canvas>
   </div>
 </div>
 
 <script>
-const URL_SCRIPT = "https://script.google.com/macros/s/AKfycbyihDnkDLVzHPbTk1X9ikT962-NsFq1vUKNqWyyau-z-fpG5ARWSbmSrdIofXcDzqYcnA/exec";
+const URL_SCRIPT = "https://script.google.com/macros/s/AKfycbxbORoWfsm8Lqg_ghum3LGqXazVbjyGL_ftaijCeNd2TL_PawQpRrovP1tUhhe8Bdi3eA/exec";
 let dados = [];
 
 async function carregarDados() {
@@ -188,7 +167,7 @@ function renderChart(id, title, labels, data, tipo) {
   });
 }
 
-document.getElementById("btnWhats").addEventListener("click", () => {
+function enviarWhatsapp() {
   const data = document.getElementById("data").value;
   const empresa = document.getElementById("empresa").value;
   const dataBR = data.split("-").reverse().join("/");
@@ -200,15 +179,15 @@ document.getElementById("btnWhats").addEventListener("click", () => {
 
   if (!filtrados.length) return alert("Nenhum dado para enviar.");
 
-  let mensagem = `📊 *Conciliações ${dataBR}*\n\n`;
+  let mensagem = `📊 *Conciliações ${dataBR}*\\n\\n`;
   filtrados.forEach(d => {
-    mensagem += `*${d.empresa}*\n• % Conciliado: ${d.percentual.toFixed(1)}%\n• Valor pendente: R$ ${d.valor.toFixed(2)}\n\n`;
+    mensagem += `*${d.empresa}*\\n• % Conciliado: ${d.percentual.toFixed(1)}%\\n• Valor pendente: R$ ${d.valor.toFixed(2)}\\n\\n`;
   });
 
   const numero = "5577999761436"; // Altere aqui
   const link = `https://wa.me/${numero}?text=${encodeURIComponent(mensagem)}`;
   window.open(link, "_blank");
-});
+}
 
 carregarDados();
 </script>
