--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <title>Análise Financeira</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script defer src="https://cdn.jsdelivr.net/npm/face-api.js"></script>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: white;
+      text-align: center;
     }
-
     #splash {
       position: fixed;
       top: 0;
@@ -24,18 +25,15 @@
       z-index: 9999;
       transition: opacity 0.5s ease;
     }
-
     #splash img {
       width: 150px;
       animation: pulse 1.5s infinite;
     }
-
     @keyframes pulse {
       0% { transform: scale(1); opacity: 1; }
       50% { transform: scale(1.05); opacity: 0.9; }
       100% { transform: scale(1); opacity: 1; }
     }
-
     header {
       background-color: white;
       color: #2c3e50;
@@ -44,32 +42,11 @@
       align-items: center;
       border-bottom: 1px solid #ccc;
     }
-
-    .logo-left {
-      flex: 1;
-      display: flex;
-      align-items: center;
-    }
-
-    .logo-left img {
-      height: 40px;
-    }
-
-    .title-center {
-      flex: 2;
-      text-align: center;
-    }
-
-    .title-center h1 {
-      font-size: 24px;
-      margin: 0;
-      font-weight: bold;
-    }
-
-    .spacer {
-      flex: 1;
-    }
-
+    .logo-left { flex: 1; display: flex; align-items: center; }
+    .logo-left img { height: 40px; }
+    .title-center { flex: 2; text-align: center; }
+    .title-center h1 { font-size: 24px; margin: 0; font-weight: bold; }
+    .spacer { flex: 1; }
     .container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
@@ -78,7 +55,6 @@
       max-width: 1200px;
       margin: auto;
     }
-
     .card {
       background: white;
       border-radius: 12px;
@@ -89,98 +65,130 @@
       text-decoration: none;
       color: inherit;
     }
-
     .card:hover {
       transform: translateY(-5px);
       background-color: #f0f8ff;
     }
-
-    .card h2 {
-      margin: 0;
-      font-size: 20px;
-      color: #2c3e50;
-    }
-
-    .icon {
-      font-size: 40px;
-      color: #2980b9;
-      margin-bottom: 10px;
-    }
-
+    .card h2 { margin: 0; font-size: 20px; color: #2c3e50; }
+    .icon { font-size: 40px; color: #2980b9; margin-bottom: 10px; }
     @media (max-width: 500px) {
-      header {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      .logo-left,
-      .spacer {
-        display: none;
-      }
-
-      .title-center {
-        flex: 1;
-      }
-
-      .card h2 {
-        font-size: 18px;
-      }
-
-      .icon {
-        font-size: 32px;
-      }
+      header { flex-direction: column; text-align: center; }
+      .logo-left, .spacer { display: none; }
+      .title-center { flex: 1; }
+      .card h2 { font-size: 18px; }
+      .icon { font-size: 32px; }
     }
+    #login-section { padding: 30px; }
+    video { border-radius: 10px; margin-top: 20px; }
+    #status { margin-top: 15px; font-weight: bold; }
   </style>
 </head>
 <body>
-
-  <!-- Splash -->
   <div id="splash">
     <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
   </div>
 
-  <!-- Cabeçalho -->
-  <header>
-    <div class="logo-left">
-      <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo">
+  <div id="login-section">
+    <h2>Bem-vindo, Leonardo</h2>
+    <p>Digite seu e-mail e aproxime o rosto da câmera para entrar</p>
+    <input type="email" id="email" placeholder="Seu email" />
+    <button onclick="iniciarReconhecimento()">Entrar</button>
+    <br>
+    <video id="video" width="320" height="240" autoplay muted></video>
+    <p id="status">Aguardando reconhecimento...</p>
+  </div>
+
+  <div id="painel" style="display:none">
+    <header>
+      <div class="logo-left">
+        <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo">
+      </div>
+      <div class="title-center">
+        <h1>Análise Financeira</h1>
+      </div>
+      <div class="spacer"></div>
+    </header>
+
+    <div class="container">
+      <a class="card" href="index.resumofinanceiro.html">
+        <div class="icon">📈</div>
+        <h2>Resumo Financeiro</h2>
+      </a>
+      <a class="card" href="index.cancelamentos.html">
+        <div class="icon">❌</div>
+        <h2>Cancelamentos</h2>
+      </a>
+      <a class="card" href="index.delivery.html">
+        <div class="icon">🚚</div>
+        <h2>Vendas Delivery</h2>
+      </a>
+      <a class="card" href="index.meta.html">
+        <div class="icon">📊</div>
+        <h2>Meta de Faturamento</h2>
+      </a>
+      <a class="card" href="index.conciliacao.html">
+        <div class="icon">💳</div>
+        <h2>Conciliações</h2>
+      </a>
     </div>
-    <div class="title-center">
-      <h1>Análise Financeira</h1>
-    </div>
-    <div class="spacer"></div>
-  </header>
+  </div>
 
-  <!-- Cards -->
-  <!-- Cards -->
-<div class="container">
-  <a class="card" href="index.resumofinanceiro.html">
-    <div class="icon">📈</div>
-    <h2>Resumo Financeiro</h2>
-  </a>
-
-  <a class="card" href="index.cancelamentos.html">
-    <div class="icon">❌</div>
-    <h2>Cancelamentos</h2>
-  </a>
-
-  <a class="card" href="index.delivery.html">
-    <div class="icon">🚚</div>
-    <h2>Vendas Delivery</h2>
-  </a>
-
-  <a class="card" href="index.meta.html">
-    <div class="icon">📊</div>
-    <h2>Meta de Faturamento</h2>
-  </a>
-
-  <a class="card" href="index.conciliacao.html">
-    <div class="icon">💳</div>
-    <h2>Conciliações</h2>
-  </a>
-</div>
-
-  <!-- Script splash -->
   <script>
+    const emailPermitido = "souzanalbert58@gmail.com";
+    let referencia = null;
+    const status = document.getElementById("status");
+    const video = document.getElementById("video");
+
+    async function carregarModelos() {
+      await faceapi.nets.tinyFaceDetector.loadFromUri('/models');
+      await faceapi.nets.faceLandmark68Net.loadFromUri('/models');
+      await faceapi.nets.faceRecognitionNet.loadFromUri('/models');
+    }
+
+    async function iniciarReconhecimento() {
+      const email = document.getElementById("email").value.trim().toLowerCase();
+      if (email !== emailPermitido) {
+        alert("Email não autorizado");
+        return;
+      }
+      status.textContent = "Carregando modelos...";
+      await carregarModelos();
+
+      navigator.mediaDevices.getUserMedia({ video: {} })
+        .then(stream => video.srcObject = stream)
+        .catch(err => status.textContent = "Erro ao acessar câmera");
+
+      video.addEventListener('play', async () => {
+        const canvas = faceapi.createCanvasFromMedia(video);
+        document.body.append(canvas);
+        const displaySize = { width: video.width, height: video.height };
+        faceapi.matchDimensions(canvas, displaySize);
+
+        if (!referencia) {
+          await new Promise(r => setTimeout(r, 2000));
+          const detection = await faceapi.detectSingleFace(video, new faceapi.TinyFaceDetectorOptions()).withFaceLandmarks().withFaceDescriptor();
+          if (!detection) {
+            status.textContent = "Rosto não detectado";
+            return;
+          }
+          referencia = detection.descriptor;
+          status.textContent = "Rosto registrado. Validando...";
+        }
+
+        const intervalo = setInterval(async () => {
+          const result = await faceapi.detectSingleFace(video, new faceapi.TinyFaceDetectorOptions()).withFaceLandmarks().withFaceDescriptor();
+          if (!result) return;
+          const distancia = faceapi.euclideanDistance(referencia, result.descriptor);
+          if (distancia < 0.45) {
+            clearInterval(intervalo);
+            status.textContent = "Acesso liberado";
+            document.getElementById("login-section").style.display = "none";
+            document.getElementById("painel").style.display = "block";
+          }
+        }, 1000);
+      });
+    }
+
     window.addEventListener('load', () => {
       const splash = document.getElementById('splash');
       setTimeout(() => {
@@ -189,6 +197,5 @@
       }, 1000);
     });
   </script>
-
 </body>
 </html>
